--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.9.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-jss": "^8.6.1",
+    "react-map-gl": "^5.0.10",
+    "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
+    "tabletop": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/\""
   },
   "eslintConfig": {
     "extends": "react-app"
