--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ohne-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://stiliyana.github.io/ohne",
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.9.0",
@@ -18,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"src/\""
+    "lint": "eslint \"src/\"",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
